# ARBITRAGEXSUPREME

./: .env.blockchain  .env.example  .env.production.example  .env.test  .gitignore  ACTIVITIES-ROADMAP-VISUAL.md  ANALISIS_ARQUITECTURA_RUTEO_ESTRATEGIAS.md  ANALISIS_GAPS_100_FUNCIONAL_SEPTIEMBRE_2025.md  ANALISIS_MATEMATICO_ESTRATEGIAS.md  API_ANALYSIS.md  API_EXAMPLES.md  ARBITRAGEX-ECOSYSTEM-REFERENCE.md  ARBITRAGEX-MONITORING-DASHBOARD.html  ARBITRAGEX_ROI_ANALYSIS.md  ARBITRAGEX_SUPREME_V3_PRD_INTEGRADO.md  ARCHITECTURE_DEPLOYMENT.md  ARCHITECTURE_UPDATED.md  ARQUITECTURA_ECOSISTEMA_CORRECTO.md  ARQUITECTURA_POST_MIGRACION_ACTUALIZADA.md  AUDITORIA-COMPLETADA.md  AUDITORIA-EXHAUSTIVA-PRODUCCION.md  AUDITORIA-PRODUCCION-ARBITRAGEX-SUPREME.md  AUDITORIA_BLOCKCHAIN_ESTRICTA_SUPREMA_V3.md  AUDITORIA_CALCULOS_ARBITRAJE.md  BACKEND_CLOUDFLARE_SETUP.md  BACKEND_ENDPOINTS_DOCUMENTATION.md  BACKEND_INTEGRATION_PLAN.md  CHECKLIST_VALIDACION_ARQUITECTURAL.md  CLOUDFLARE_DEPLOYMENT_REQUEST.md  CREDENTIALS_OPTIONS_HIERARCHY.md  Cargo.toml  DEMO_PROTECCION_RUGPULLS.js  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_COMPLETE.md  DEPLOYMENT_LOVABLE_CLOUDFLARE_COMPLETO.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.production  ECONOMIC_PERFORMANCE_DASHBOARD.md  EDGE_CLEANUP_PLAN.md  (+118 more)
ARBITRAGEX-CONTABO-BACKEND/: Cargo.toml  PriceServiceOptimized.ts  README.md  README_BACKEND.md  demo-arbitragex-pro-2025.js  demo-matematico-server.js  docker-compose.multiagent.yml  docker-compose.optimized.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem-direct.config.cjs  ecosystem-notifications.config.cjs  ecosystem-simple.config.cjs  monitor-cron.txt  monitor-service.sh  notification-server-fixed.js  real-data-server.js  seed.sql  test-alerts.js
ARBITRAGEX-CONTABO-BACKEND/activepieces/flows/: backup-automation-flow.json  performance-optimization-flow.json  system-monitoring-flow.json
ARBITRAGEX-CONTABO-BACKEND/apps/api/: tsconfig.json
ARBITRAGEX-CONTABO-BACKEND/apps/web/: ecosystem.config.cjs  next.config.ts
ARBITRAGEX-CONTABO-BACKEND/config-root/: notification-services.config.js  production.config.ts
ARBITRAGEX-CONTABO-BACKEND/config-root/caching/: price_feed_cache_config.toml  route_cache_config.toml
ARBITRAGEX-CONTABO-BACKEND/config-root/ml/: onnx_runtime_tuning_optimization.toml
ARBITRAGEX-CONTABO-BACKEND/config-root/network/: compression_optimization.toml  connection_pooling_optimization.toml  dns_caching_optimization.toml
ARBITRAGEX-CONTABO-BACKEND/config-root/optimizations/: opportunity_scanner_simd_vectorization.toml
ARBITRAGEX-CONTABO-BACKEND/config-root/system/: numa_topology_tuning.toml  scheduler_policy_tuning.toml
ARBITRAGEX-CONTABO-BACKEND/config/caching/: opportunity_cache_config.toml  signature_cache_config.toml
ARBITRAGEX-CONTABO-BACKEND/config/ml/: batch_inference_optimization.toml  model_quantization_optimization.toml
ARBITRAGEX-CONTABO-BACKEND/config/network/: request_batching_optimization.toml
ARBITRAGEX-CONTABO-BACKEND/config/optimizations/: gas_estimator_inline_functions.toml  mempool_scanner_lock_free_structures.toml  routing_engine_branch_prediction.toml  transaction_builder_cache_line_alignment.toml
ARBITRAGEX-CONTABO-BACKEND/config/system/: interrupt_coalescing_tuning.toml
ARBITRAGEX-CONTABO-BACKEND/contabo-vps-setup/: deploy-arbitragex.sh  docker-compose.prod.yml
ARBITRAGEX-CONTABO-BACKEND/contabo-vps-setup/cron/: .env.example
ARBITRAGEX-CONTABO-BACKEND/contabo-vps-setup/observability/: setup-observability.sh
ARBITRAGEX-CONTABO-BACKEND/contabo-vps-setup/recon/: .eslintrc.json  Dockerfile  tsconfig.json
ARBITRAGEX-CONTABO-BACKEND/contabo-vps-setup/relays-client/: docker-compose.dev.yml  package.json
ARBITRAGEX-CONTABO-BACKEND/contabo-vps-setup/searcher-rs/: Cargo.toml
ARBITRAGEX-CONTABO-BACKEND/contabo-vps-setup/selector-api/: package.json
ARBITRAGEX-CONTABO-BACKEND/contabo-vps-setup/sim-ctl/: .env.development.example  Dockerfile  docker-compose.dev.yml  package.json
ARBITRAGEX-CONTABO-BACKEND/contracts/interfaces/: IFlashLoanProviders.sol
ARBITRAGEX-CONTABO-BACKEND/contracts/libraries/: ArbitrageLib.sol
ARBITRAGEX-CONTABO-BACKEND/contracts/strategies/: CrossChainArbitrage.sol  FlashSwapPSMArbitrage.sol  GovernanceArbitrage.sol  GovernanceMEVProtectionStrategy.sol  JITLiquidityBackrunArbitrage.sol  LendingArbitrage.sol  LiquidityMiningArbitrage.sol  MEVArbitrage.sol  NFTArbitrageStrategy.sol  OptionsArbitrage.sol  PerpetualArbitrage.sol  StatisticalArbitrage.sol  StatisticalZScoreAdvancedArbitrage.sol
ARBITRAGEX-CONTABO-BACKEND/langflow/flows/: flashbots-detective-agent.json  risk-guardian-agent.json  strategy-optimizer-agent.json
ARBITRAGEX-CONTABO-BACKEND/ml-inference/src/: config.rs  feature_extractor.rs  feature_store.rs  inference_engine.rs  main.rs
ARBITRAGEX-CONTABO-BACKEND/monitoring/: alert_rules.yml  docker-compose.observability.yml
ARBITRAGEX-CONTABO-BACKEND/monitoring-extra/: prometheus.yml
ARBITRAGEX-CONTABO-BACKEND/monitoring-extra/alerts/: alert-integrator.js  anomaly-detector.js
ARBITRAGEX-CONTABO-BACKEND/monitoring-extra/backup/: backup-manager.js
ARBITRAGEX-CONTABO-BACKEND/monitoring-extra/health-checks/: dependency-monitor.js
ARBITRAGEX-CONTABO-BACKEND/monitoring/alerts/: alert-manager.js
ARBITRAGEX-CONTABO-BACKEND/nginx/: frontend.conf  nginx.conf
ARBITRAGEX-CONTABO-BACKEND/opportunity-scanner/: Cargo.toml
ARBITRAGEX-CONTABO-BACKEND/performance/: simple-analyzer.js
ARBITRAGEX-CONTABO-BACKEND/scripts/: deploy-contabo.sh  deploy-sandbox-validation.sh  deploy.sh  implement-critical-security-fixes.sh  production-deployment.ts  production-tuning-optimizer.sh  security-audit-mev-protection.sh
ARBITRAGEX-CONTABO-BACKEND/services/: monitoring.service.ts  wallet.service.ts
ARBITRAGEX-CONTABO-BACKEND/temporal-workers/: package.json
ARBITRAGEX-CONTABO-BACKEND/validation/: multiagent-integration-test.ts
apps/mev-engine/: Cargo.toml
apps/mev-engine/src/: main.rs
crates/ml-inference/: Cargo.toml
crates/router-executor/: Cargo.toml
services/searcher-rs/: Cargo.toml
(+803 files in other folders)
