[package]
name = "opportunity-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["trace", "cors", "compression-br", "compression-gzip", "timeout"] }
simd-json = "0.13"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream", "gzip"] }
websocket = "0.26"
ethers = { version = "2.0", features = ["ws", "rustls"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
prometheus = "0.13"
anyhow = "1.0"
thiserror = "1.0"
fastrand = "2.0"
chrono = { version = "0.4", features = ["serde"] }

# Profiles are configured at workspace level