[package]
name = "arbitragex-mev-engine"
version = "3.0.0"
edition = "2021"
authors = ["ArbitrageX Team"]
description = "High-performance MEV Engine Core for ArbitrageX Supreme V3.0"
license = "MIT"
repository = "https://github.com/hefarica/ARBITRAGEX-CONTABO-BACKEND"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Web framework for API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Blockchain
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = "0.28"
hex = "0.4"

# Numeric computation
num-bigint = "0.4"
num-traits = "0.2"

# Time and datetime
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Environment variables
dotenv = "0.15"

# Testing
mockito = "1.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "mev-engine"
path = "src/main.rs"

[[bench]]
name = "arbitrage_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true