[package]
name = "ml-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
ort = { version = "2.0.0-rc.10", features = ["load-dynamic"] }
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["trace", "cors", "compression-br", "compression-gzip", "timeout"] }
toml = "0.8"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "5.5"
futures = "0.3"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
prometheus = "0.13"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }

bincode = "1.3"
hex = "0.4"
sha3 = "0.10"

# Profiles are configured at workspace level

