[package]
name = "router-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["trace", "cors", "compression-br", "compression-gzip", "timeout"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "rustls-tls"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
ethers-signers = { version = "2.0", features = ["aws", "ledger", "trezor"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
prometheus = "0.13"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
sha3 = "0.10"
secp256k1 = "0.28"
alloy-primitives = "0.4"
revm = { version = "3.5", features = ["std", "serde"] }
bincode = "1.3"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# Profiles are configured at workspace level
# EIP-712 and cryptographic dependencies
[dependencies.k256]
version = "0.13"
features = ["ecdsa", "sha256"]

[dependencies.ethers-core]
version = "2.0"
features = ["eip712"]
