[package]
name = "arbitragex-searcher"
version = "3.0.0"
edition = "2021"
authors = ["ArbitrageX Development Team <dev@arbitragex.io>"]
description = "High-performance MEV searcher for ArbitrageX Supreme V3.0"
license = "MIT"
repository = "https://github.com/hefarica/ARBITRAGEX-CONTABO-BACKEND"
keywords = ["mev", "arbitrage", "ethereum", "defi", "flashloans"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
name = "arbitragex_searcher"
path = "src/lib.rs"

[[bin]]
name = "searcher"
path = "src/main.rs"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }

# Ethereum & Web3
ethers = { version = "2.0", features = ["rustls", "ws", "ipc"] }
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-signers = "2.0"
ethers-contract = "2.0"
ethers-middleware = "2.0"
alloy-primitives = "0.4"
alloy-sol-types = "0.4"

# Async & Concurrency
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Cache & Redis
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
moka = { version = "0.12", features = ["future"] }

# HTTP Client & API
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hyper = { version = "0.14", features = ["full"] }

# Cryptography
sha3 = "0.10"
secp256k1 = "0.28"
hex = "0.4"
rand = "0.8"

# Mathematical Operations
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = { version = "1.33", features = ["serde-float"] }
statrs = "0.16"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
metrics = "0.21"
metrics-prometheus = "0.6"

# Configuration & Environment
config = "0.13"
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Time & Scheduling
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
lazy_static = "1.4"
parking_lot = "0.12"

# Development Dependencies
[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mock_instant = "0.3"

# Build optimizations
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

# Benchmarks
[[bench]]
name = "arbitrage_benchmark"
harness = false

[[bench]]
name = "simulation_benchmark"
harness = false

# Features
[features]
default = ["full"]
full = ["mempool", "simulation", "arbitrage", "monitoring"]
mempool = []
simulation = []
arbitrage = []
monitoring = []
testing = []

# Workspace configuration (if part of larger workspace)
[workspace]
members = [
    ".",
    "../selector-api",
    "../sim-ctl",
    "../relays-client",
    "../recon"
]

# Documentation
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]