[package]
name = "arbitragex-searcher-rs"
version = "3.0.0"
edition = "2021"
authors = ["ArbitrageX Supreme Team"]
description = "Ultra-fast Rust searcher engine for MEV arbitrage opportunities"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Web framework
actix-web = "4.4"
actix-rt = "2.9"

# Ethereum libraries
ethers = { version = "2.0", features = ["rustls", "ws", "ipc"] }
alloy-core = "0.5"
alloy-primitives = "0.5"
alloy-json-rpc = "0.1"
alloy-provider = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Metrics
prometheus = "0.13"
metrics = "0.22"
metrics-prometheus = "0.6"

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
dotenv = "0.15"

# Numeric computations
rust_decimal = { version = "1.33", features = ["serde-float"] }
bigdecimal = "0.4"

# Cryptography
sha2 = "0.10"
secp256k1 = "0.28"
hex = "0.4"

# Performance optimizations
rayon = "1.8"
dashmap = "5.5"
parking_lot = "0.12"

# Testing
[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"

[[bench]]
name = "strategy_benchmarks"
harness = false

[[bench]]
name = "selector_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = [".", "benches"]